crates/runtime/tests/models/snapshots/integration_models__models__nsql__hf_invalid_dataset_name_error.snap
---
source: crates/runtime/tests/models/mod.rs
expression: e.to_string()
---
HTTP error: 500 Internal Server Error - invalid args: Unable to get table: Error during planning: No table named 'dataset_not_in_spice'
