crates/runtime/tests/models/snapshots/integration_models__models__nsql__hf_invalid_model_name_error.snap
---
source: crates/runtime/tests/models/mod.rs
expression: e.to_string()
---
HTTP error: 400 Bad Request - Model model_not_in_spice not found
