crates/runtime/tests/models/snapshots/integration_models__models__nsql__hf_invalid_model_name_tasks.snap
---
source: crates/runtime/tests/models/mod.rs
expression: response
---
+------------------------+------------------------------------------------------------------+
| task                   | input                                                            |
+------------------------+------------------------------------------------------------------+
| nsql                   | how many records (as 'total_records') are in taxi_trips dataset? |
| tool_use::table_schema | {"tables":["spice.public.taxi_trips"],"output":"full"}           |
+------------------------+------------------------------------------------------------------+
