crates/runtime/tests/models/snapshots/integration_models__models__nsql__openai_with_model_tasks.snap
---
source: crates/runtime/tests/models/mod.rs
expression: response
---
+------------------------+------------+
| task                   | input      |
+------------------------+------------+
| nsql                   | [redacted] |
| tool_use::table_schema | [redacted] |
| sql_query              | truncated  |
+------------------------+------------+
